2010-01-16  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #12553: Text "A simple table with up to 8 columns" is wrong (Thanks to Georg Ringer)
	* Fixed bug #13255: Wrong text in wizard "create multiple pages" (Thanks to Georg Ringer)

2010-01-15  Francois Suter  <francois@typo3.org>

	* Fixed bug #11815: Saving translation settings in EM: strcmp() throws warning with PHP5.3 (Thanks to Steffen Gebert, Stefan Geith and Rupert Germann)

2010-01-14  Oliver Hader  <oliver@typo3.org>

	* Release of TYPO3 4.3.1

2010-01-14  Dmitry Dulepov  <dmitry.dulepov+typo3svn@gmail.com>

	* Fixed bug #13146: Authentication Bypass in TYPO3 Core (OpenID)

2010-01-14  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12947: saveDocNew saves on top instead of after (Thanks to Steffen Gebert)

2010-01-13  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #13200: Text change: Links for additional software in install tool wrong / non-working (Thanks to Susanne Moog)
	* Fixed bug #13199: Cleanup: fileadminDir is hardcoded in several places (Thanks to Susanne Moog)
	* Fixed bug #5716: Install tool doesn't take the fileadminDir into account (Thanks to Benjamin Mack)
	* Fixed bug #12709: Forgotten flash message in user setup (Thanks to Georg Ringer)
	* Fixed bug #11968: Sporadic random Backend Logoffs / Add X-UA-Compatible flag (Thanks to Steffen Gebert)
	* Fixed bug #12924: Bugfix: t3lib_tcemain checkFullLanguageAccess is too restrictive (Thanks to Tolleiv Nietsch)
	* Fixed bug #13211: Change focus to login field when OpenId is selected at login (Thanks to Steffen Gebert)
	* Follow-up to #12781: Bug: tceforms type do not work if the type field has l10n_mode == exclude (thanks to Fabrizio Branca)

2010-01-11  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #13092: Massuploader button is too small (Thanks to Steffen Gebert)

2010-01-10  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #12631: Flash Message to the history / changelog (Thanks to Georg Ringer)
