@@ -129,9 +129,22 @@ class tx_wizardcrpages_webfunc_2 extends t3lib_extobjbase {
 					$tce->start($data,array());
 					$tce->process_datamap();
 					t3lib_BEfunc::getSetUpdateSignal('updatePageTree');
+					
+					$flashMessage = t3lib_div::makeInstance(
+						't3lib_FlashMessage',
+						'',
+						$GLOBALS['LANG']->getLL('wiz_newPages_create')
+					);					
 				} else {
-					$theCode.=$GLOBALS['TBE_TEMPLATE']->rfw($LANG->getLL('wiz_newPages_noCreate').'<br /><br />');
+					$flashMessage = t3lib_div::makeInstance(
+						't3lib_FlashMessage',
+						'',
+						$GLOBALS['LANG']->getLL('wiz_newPages_noCreate'),
+						t3lib_FlashMessage::ERROR
+					);
 				}
+				
+				$theCode.= $flashMessage->render();
 
 					// Display result:
 				$menuItems = $sys_pages->getMenu($this->pObj->id,'*','sorting','',0);
