@@ -1,3 +1,7 @@
+2010-01-17  Andreas Otto  <andreas@otto-hanika.de>
+
+	* Fixed bug #13254: Flash Messages in wizard "create multiple pages" (Thanks to Georg Ringer)
+
 2010-01-16  Xavier Perseguers  <typo3@perseguers.ch>
 
 	* Fixed bug #12553: Text "A simple table with up to 8 columns" is wrong (Thanks to Georg Ringer)
